package chunkserver

import (
	"errors"
	"fmt"
	"os"
	"path/filepath"
	"context"
	"github.com/syndtr/goleveldb/leveldb"
	"github.com/syloe1/cos/internal/proto"  // æ›¿æ¢syloe1ä¸ºä½ çš„æ¨¡å—å
)

// ChunkServer ç»“æ„ä½“ï¼ˆå­˜å‚¨é…ç½®å’ŒLevelDBå®ä¾‹ï¼‰
type ChunkServer struct {
	proto.UnimplementedChunkServiceServer  // å¿…é¡»åµŒå…¥ï¼Œå®ç°gRPCæ¥å£
	dbPath       string  // LevelDBå­˜å‚¨è·¯å¾„
	chunkStorePath string// å—æ–‡ä»¶æœ¬åœ°å­˜å‚¨è·¯å¾„
	db           *leveldb.DB  // LevelDBå®ä¾‹
}

// NewChunkServer åˆ›å»ºChunkServerå®ä¾‹
func NewChunkServer(dbPath, chunkStorePath string) (*ChunkServer, error) {
	// 1. åˆ›å»ºå­˜å‚¨ç›®å½•ï¼ˆè‹¥ä¸å­˜åœ¨ï¼‰
	if err := os.MkdirAll(dbPath, 0755); err != nil {
		return nil, fmt.Errorf("create db dir failed: %v", err)
	}
	if err := os.MkdirAll(chunkStorePath, 0755); err != nil {
		return nil, fmt.Errorf("create chunk dir failed: %v", err)
	}

	// 2. æ‰“å¼€LevelDB
	db, err := leveldb.OpenFile(dbPath, nil)
	if err != nil {
		return nil, fmt.Errorf("open leveldb failed: %v", err)
	}

	return &ChunkServer{
		dbPath:         dbPath,
		chunkStorePath: chunkStorePath,
		db:             db,
	}, nil
}

// StoreChunk å®ç°gRPCçš„StoreChunkæ¥å£ï¼šå­˜å‚¨å—åˆ°æœ¬åœ°+LevelDBè®°å½•ç´¢å¼•
// func (s *ChunkServer) StoreChunk(req *proto.ChunkInfo, stream proto.ChunkService_StoreChunkServer) error {
// 	// 1. ç”Ÿæˆå—æ–‡ä»¶æœ¬åœ°è·¯å¾„ï¼ˆchunkStorePath/file_id/chunk_idï¼‰
// 	chunkDir := filepath.Join(s.chunkStorePath, req.FileId)
// 	if err := os.MkdirAll(chunkDir, 0755); err != nil {
// 		return fmt.Errorf("create chunk dir %s failed: %v", chunkDir, err)
// 	}
// 	chunkPath := filepath.Join(chunkDir, req.ChunkId)

// 	// 2. å†™å…¥å—æ•°æ®åˆ°æœ¬åœ°æ–‡ä»¶
// 	if err := os.WriteFile(chunkPath, req.Data, 0644); err != nil {
// 		return fmt.Errorf("write chunk %s failed: %v", chunkPath, err)
// 	}

// 	// 3. LevelDBè®°å½•ï¼škey=chunk_id, value=chunkPath
// 	if err := s.db.Put([]byte(req.ChunkId), []byte(chunkPath), nil); err != nil {
// 		// å›æ»šï¼šåˆ é™¤å·²å†™å…¥çš„å—æ–‡ä»¶
// 		os.Remove(chunkPath)
// 		return fmt.Errorf("write leveldb failed: %v", err)
// 	}

// 	// 4. è¿”å›æˆåŠŸå“åº”
// 	return stream.SendAndClose(&proto.StoreChunkResponse{
// 		Success: true,
// 		Message: fmt.Sprintf("chunk %s stored success", req.ChunkId),
// 	})
// }
func (s *ChunkServer) StoreChunk(ctx context.Context, req *proto.ChunkInfo) (*proto.StoreChunkResponse, error) {
	// ä¸šåŠ¡é€»è¾‘ï¼ˆåˆ›å»ºç›®å½•ã€å†™æ–‡ä»¶ã€LevelDB è®°å½•ï¼‰å®Œå…¨ä¸å˜
	chunkDir := filepath.Join(s.chunkStorePath, req.FileId)
	if err := os.MkdirAll(chunkDir, 0755); err != nil {
		return nil, fmt.Errorf("create chunk dir %s failed: %v", chunkDir, err)
	}
	chunkPath := filepath.Join(chunkDir, req.ChunkId)

	if err := os.WriteFile(chunkPath, req.Data, 0644); err != nil {
		return nil, fmt.Errorf("write chunk %s failed: %v", chunkPath, err)
	}

	if err := s.db.Put([]byte(req.ChunkId), []byte(chunkPath), nil); err != nil {
		os.Remove(chunkPath)
		return nil, fmt.Errorf("write leveldb failed: %v", err)
	}

	// ğŸ”¥ ä¿®å¤ï¼šç›´æ¥è¿”å›å“åº”ï¼ˆä¸ç”¨ stream.SendAndCloseï¼‰
	return &proto.StoreChunkResponse{
		Success: true,
		Message: fmt.Sprintf("chunk %s stored success", req.ChunkId),
	}, nil
}
// GetChunk å®ç°gRPCçš„GetChunkæ¥å£ï¼šä»LevelDBæŸ¥è·¯å¾„â†’è¯»å–å—æ•°æ®
// func (s *ChunkServer) GetChunk(req *proto.GetChunkRequest, stream proto.ChunkService_GetChunkServer) error {
// 	// 1. LevelDBæŸ¥è¯¢å—è·¯å¾„
// 	chunkPathBytes, err := s.db.Get([]byte(req.ChunkId), nil)
// 	if err != nil {
// 		if err == leveldb.ErrNotFound {
// 			return errors.New("chunk not found")
// 		}
// 		return fmt.Errorf("read leveldb failed: %v", err)
// 	}
// 	chunkPath := string(chunkPathBytes)

// 	// 2. è¯»å–æœ¬åœ°å—æ–‡ä»¶
// 	data, err := os.ReadFile(chunkPath)
// 	if err != nil {
// 		return fmt.Errorf("read chunk %s failed: %v", chunkPath, err)
// 	}

// 	// 3. è¿”å›å—ä¿¡æ¯ï¼ˆChunkInfoéœ€è¡¥å……å¿…è¦å­—æ®µï¼Œè¿™é‡Œç®€åŒ–ï¼‰
// 	return stream.SendAndClose(&proto.ChunkInfo{
// 		FileId:     req.FileId,
// 		ChunkId:    req.ChunkId,
// 		Data:       data,
// 		ChunkIndex: 0,  // å®é™…åœºæ™¯éœ€ä»LevelDBæˆ–æ–‡ä»¶ä¸­è¯»å–ï¼Œè¿™é‡Œç®€åŒ–
// 		TotalChunks: 0,
// 	})
// }
func (s *ChunkServer) GetChunk(ctx context.Context, req *proto.GetChunkRequest) (*proto.ChunkInfo, error) {
	// ä¸šåŠ¡é€»è¾‘å®Œå…¨ä¸å˜
	chunkPathBytes, err := s.db.Get([]byte(req.ChunkId), nil)
	if err != nil {
		if err == leveldb.ErrNotFound {
			return nil, errors.New("chunk not found")
		}
		return nil, fmt.Errorf("read leveldb failed: %v", err)
	}
	chunkPath := string(chunkPathBytes)

	data, err := os.ReadFile(chunkPath)
	if err != nil {
		return nil, fmt.Errorf("read chunk %s failed: %v", chunkPath, err)
	}

	// ğŸ”¥ ä¿®å¤ï¼šç›´æ¥è¿”å› ChunkInfo
	return &proto.ChunkInfo{
		FileId:     req.FileId,
		ChunkId:    req.ChunkId,
		Data:       data,
		ChunkIndex: 0,
		TotalChunks: 0,
	}, nil
}
// Close å…³é—­LevelDBè¿æ¥
func (s *ChunkServer) Close() error {
	return s.db.Close()
}